# backend/docs/openapi.yaml
@@ -353,6 +353,76 @@ paths:
       summary: Delete a user
       tags:
         - Users
+  /api/users/me:
+    get:
+      operationId: UserController_me
+      parameters: []
+      responses:
+        '200':
+          description: ''
+          content:
+            application/json:
+              schema:
+                properties:
+                  id:
+                    type: string
+                    example: 550e8400-e29b-41d4-a716-446655440000
+                  name:
+                    type: string
+                    example: Sina Ghadrdan
+                  username:
+                    type: string
+                    example: sina.q
+                  role:
+                    type: string
+                    enum:
+                      - system_admin
+                      - management
+                      - qc_inspector
+                      - reporter
+        '401':
+          description: ''
+          content:
+            application/json:
+              schema:
+                properties:
+                  type:
+                    type: string
+                    example: about:blank
+                  title:
+                    type: string
+                    example: Unauthorized
+                  status:
+                    type: number
+                    example: 401
+        '404':
+          description: ''
+          content:
+            application/json:
+              schema:
+                properties:
+                  type:
+                    type: string
+                    example: https://my-api-doc.dev/problems/entity-not-found
+                  title:
+                    type: string
+                    example: Entity not found
+                  status:
+                    type: number
+                    example: 404
+                  detail:
+                    type: string
+                    example: >-
+                      Entity not found with id
+                      550e8400-e29b-41d4-a716-446655440000
+                  entityId:
+                    type: string
+                    example: 550e8400-e29b-41d4-a716-446655440000
+      security:
+        - bearer: []
+      summary: Get the signed-in user
+      tags:
+        - Users
   /api/auth/login:
     post:
       operationId: AuthController_login
